# mirai-group-element-analyzer

./: .gitignore  LICENSE  README.md  config.json.example  pyproject.toml
group_element_analyzer/: bot.py
